--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -12,6 +12,9 @@ operator:
     requests:
       cpu: 200m
       memory: 256Mi
+  istio:
+    injection:
+      enabled: false
 
 istioVersion: "1.10"
 
