--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -28,6 +28,7 @@ spec:
   istiod:
     deployment:
       replicas:
+        autoscaleEnabled: true
         min: 1
         max: 5
         count: 1
