--- a/internal/util/testdata/test_istiocontrolplane.yaml
+++ b/internal/util/testdata/test_istiocontrolplane.yaml
@@ -29,6 +29,7 @@ spec:
   istiod:
     deployment:
       replicas:
+        autoscaleEnabled: true
         min: 1
         max: 5
         count: 1
