--- a/internal/util/testdata/expected_values.yaml
+++ b/internal/util/testdata/expected_values.yaml
@@ -36,8 +36,11 @@ pilot:
   # if protocol sniffing is enabled for inbound
   enableProtocolSniffingForInbound: true
 
-  nodeSelector: {}
-  podAnnotations: {}
+  nodeSelector:
+    region: east
+    type: user-node
+  podAnnotations:
+    foo: bar
 
   # You can use jwksResolverExtraRootCA to provide a root certificate
   # in PEM format. This will then be trusted by pilot when resolving
