Add proxyWasm usage to template

--- a/internal/util/testdata/expected_values.yaml
+++ b/internal/util/testdata/expected_values.yaml
@@ -156,12 +156,12 @@ telemetry:
     enabled: false
     metadataExchange:
       # Indicates whether to enable WebAssembly runtime for metadata exchange filter.
-      wasmEnabled: false
+      wasmEnabled: true
     # Indicate if prometheus stats filter is enabled or not
     prometheus:
       enabled: true
       # Indicates whether to enable WebAssembly runtime for stats filter.
-      wasmEnabled: false
+      wasmEnabled: true
       # overrides stats EnvoyFilter configuration.
       configOverride:
         gateway: {}
