--- a/internal/util/testdata/test_istiocontrolplane.yaml
+++ b/internal/util/testdata/test_istiocontrolplane.yaml
@@ -100,7 +100,7 @@ spec:
   sds:
     tokenAudience: "istio-ca"
   proxyWasm:
-    enabled: false
+    enabled: true
   watchOneNamespace: true
   defaultPodDisruptionBudget:
     enabled: false
