--- a/internal/assets/manifests/istio-control/istio-discovery/templates/mutatingwebhook.yaml
+++ b/internal/assets/manifests/istio-control/istio-discovery/templates/mutatingwebhook.yaml
@@ -29,7 +29,11 @@ a unique prefix to each. */}}
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  {{- if eq .Values.global.distribution "cisco" }}
   name: {{ include "name-with-namespaced-revision" ( dict "name" "istio-sidecar-injector" "context" $) }}
+  {{- else }}
+  name: istio-sidecar-injector{{- if not (eq .Values.revision "") }}-{{ .Values.revision }}.{{ .Release.Namespace }}{{- end }}
+  {{- end }}
   labels:
     istio.io/rev: {{ include "namespaced-revision" . }}
     install.operator.istio.io/owning-resource: {{ .Values.ownerName | default "unknown" }}
