--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -95,6 +95,7 @@ spec:
     enabled: true
   jwtPolicy: "THIRD_PARTY_JWT"
   caAddress: ""
+  distribution: "official"
   httpProxyEnvs:
     httpProxy: ""
     httpsProxy: ""
