--- a/internal/util/testdata/expected_values.yaml
+++ b/internal/util/testdata/expected_values.yaml
@@ -196,7 +196,7 @@ revisionTags: []
 ownerName: ""
 
 global:
-  distribution: "cisco"
+  distribution: "official"
   # Used to locate istiod.
   istioNamespace: istio-system
   # enable pod disruption budget for the control plane, which is used to
