--- a/internal/util/testdata/test_istiocontrolplane.yaml
+++ b/internal/util/testdata/test_istiocontrolplane.yaml
@@ -74,7 +74,13 @@ spec:
     componentLogLevel: "misc:info"
     clusterDomain: "x.y.z"
     holdApplicationUntilProxyStarts: true
-    lifecycle: {}
+    lifecycle:
+      postStart:
+        exec:
+          command: [ "/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message" ]
+      preStop:
+        exec:
+          command: [ "/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done" ]
     resources:
       requests:
         cpu: 50m
