--- a/internal/util/testdata/expected_values.yaml
+++ b/internal/util/testdata/expected_values.yaml
@@ -42,7 +42,26 @@ pilot:
   nodeSelector:
     region: east
     type: user-node
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: kubernetes.io/e2e-az-name
+                operator: In
+                values:
+                  - e2e-az1
+                  - e2e-az2
+  tolerations:
+    - key: "key1"
+      operator: "Equal"
+      value: "value1"
+      effect: "NoSchedule"
   podAnnotations: {}
+
+  securityContext:
+    runAsUser: 2000
+    allowPrivilegeEscalation: false
 
   # You can use jwksResolverExtraRootCA to provide a root certificate
   # in PEM format. This will then be trusted by pilot when resolving
