--- a/internal/assets/manifests/istio-control/istio-discovery/templates/deployment.yaml
+++ b/internal/assets/manifests/istio-control/istio-discovery/templates/deployment.yaml
@@ -152,12 +152,7 @@ spec:
 {{ toYaml .Values.global.defaultResources | trim | indent 12 }}
 {{- end }}
           securityContext:
-            runAsUser: 1337
-            runAsGroup: 1337
-            runAsNonRoot: true
-            capabilities:
-              drop:
-              - ALL
+            {{- toYaml .Values.pilot.securityContext | nindent 12 }}
           volumeMounts:
           {{- if eq .Values.global.jwtPolicy "third-party-jwt" }}
           - name: istio-token
@@ -204,5 +199,17 @@ spec:
       - name: extracacerts
         configMap:
           name: {{ include "name-with-revision" ( dict "name" "pilot-jwks-extra-cacerts" "context" $) }}
+  {{- end }}
+      {{- with .Values.pilot.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.pilot.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.pilot.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
   {{- end }}
 ---
